# kumo-app

./: .env.example  .gitignore  LICENSE  README.md  package.json  pnpm-lock.yaml  qvac.config.json  tsconfig.base.json
apps/desktop/: package.json  tailwind.config.mjs
apps/desktop/__tests__/: durable-nonce.test.ts  magicblock.test.ts  qvac-client.test.ts
apps/desktop/app/: globals.css  layout.tsx  page.tsx
apps/desktop/app/app/: MobileFlow.tsx  page.tsx  providers.tsx
apps/desktop/components/: topnav.tsx
apps/desktop/lib/: contacts.ts  durable-nonce.ts  lifi-bridge.ts  magicblock-pmts.ts  qvac-client.ts  wallet.ts
apps/mobile/: .env.example  app.json  babel.config.js  index.js  metro.config.js  package.json  polyfill.js  tsconfig.json
apps/mobile/app/: _layout.tsx  index.tsx
apps/web/: next.config.mjs  package.json  tailwind.config.mjs  tsconfig.json  vitest.config.ts
apps/web/__tests__/: intent-payload.test.ts  magicblock.test.ts  shared.test.ts
apps/web/app/: globals.css  layout.tsx  manifest.ts  page.tsx
apps/web/components/: get-app-stores.tsx  kumo-mascot.tsx  landing-nav.tsx
apps/web/lib/: app-store-links.ts  build-public-transfer.ts  contacts.ts  durable-nonce.ts  lifi-bridge.ts  magicblock-pmts.ts  qvac-client.ts  wallet.ts
patches/: whisper.rn@0.5.5.patch
programs/intent-receipt/: Anchor.toml  package.json
programs/intent-receipt/programs/intent-receipt/: Cargo.toml
programs/intent-receipt/programs/intent-receipt/src/: lib.rs
programs/intent-receipt/tests/: intent-receipt.ts
scripts/: mint-magicblock-session.ts
(+92 files in other folders)
