[package]
name = "intent-receipt"
version = "0.1.0"
edition = "2021"
description = "Kumo — on-chain intent commitment and post-settlement receipt"
license = "MIT"

[lib]
crate-type = ["cdylib", "lib"]
name = "intent_receipt"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.31.1"
